<resources>
    <string name="app_name">Debtcoin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login">LOGIN</string>
    <string name="action_settings">Settings</string>
    <string name="registerhere"><u>Register Here</u></string>
    <string name="viewfaq"><u>View FAQs</u></string>
    <string name="sorryforthe">Sorry for the inconvenience!</string>
    <string name="sorrymessage">
       Since Debtcoin is just a newly-established company and we are still in the stage of enhancing the system, we limit the registered applicants. And sadly, the approved loan applicants for private sector had exceeded the quantity that we set. Thus, for now, we only accept loan applicants from public sector. We hope for your understanding.
\n\n
If you are a government employee and wanted to avail a loan, just message us thru our mobile app and we will open a slot for you to continue registering.
\n\n
For other concerns, contact our support team at 0998-984-4714 or email us thru debtcoinph@gmail.com.

    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email">Please enter your email address:</string>
    <string name="enter_codes">Please enter the codes sent to your email</string>
    <string name="steptwo_message">Insertion of this Code confirms that you understand and agree to Debtcoin <u>Terms &amp; Conditions</u> and <u>Privacy Policy</u></string>
    <string name="next">Next</string>
    <string name="stepone">STEP 1 OF 10</string>
    <string name="steptwo">STEP 2 OF 10</string>
    <string name="stepthree">STEP 3 OF 10</string>
    <string name="stepfour">STEP 4 OF 10</string>
    <string name="stepfive">STEP 5 OF 10</string>
    <string name="stepsix">STEP 6 OF 10</string>
    <string name="stepseven">STEP 7 OF 10</string>
    <string name="stepeight">STEP 8 OF 10</string>
    <string name="stepnine">STEP 9 OF 10</string>
    <string name="stepten">STEP 10 OF 10</string>
    <string name="personal_info_text">Personal Information</string>
    <string name="fullname">Full Name</string>
    <string name="iddoctype">Your ID Document Type</string>
    <string name="sss">SSS</string>
    <string name="tin">TIN</string>
    <string name="prc">PRC</string>
    <string name="iddocnum">ID Document Number</string>
    <string name="dob">Date of Birth</string>
    <string name="mobnumber">Mobile Number</string>
    <string name="address">Present Address</string>
    <string name="employment_info">Employment Information</string>
    <string name="emp_status">Employment Status</string>
    <string name="emp_or_busi">Employer Name or Business Name</string>
    <string name="nature">Nature of Employer or Business</string>
    <string name="jobpos">Job Position</string>
    <string name="empadd">Employer or Business Address</string>
    <string name="ref1">Reference 1 Name</string>
    <string name="userornum">Reference 1 User ID or Mobile Number</string>
    <string name="ref2name">Reference 2 Name</string>
    <string name="ref2userornum">Reference 2 User ID or Mobile Number</string>
    <string name="notestep5">Note: Being referred by existing customer can get higher chance of approval, but optional.</string>
    <string name="reference_info">Reference Information</string>
    <string name="financial_info">Financial Information</string>
    <string name="bankname">Bank Name</string>
    <string name="accounttypestepsix">Account Type</string>
    <string name="accountnumberstepsix">Account Number</string>
    <string name="notestep6">Note: Providing bank details can get higher chance of approval, but optional. \n(put N/A if no bank details)</string>
    <string-array name="employmentstatus">

        <item>Employed</item>
        <item>Self-Employed</item>
        <item>Business Owner</item>

    </string-array>
    <string name="API_URL">http://54.179.177.185:8080/</string>
    <string name="stepseven_title">Please take a picture of Government ID document (front)</string>
    <string name="retake">RETAKE</string>
    <string name="stepeight_title">Please take a selfie with your Government ID</string>
    <string name="please_review">Please review and make sure that all info is correct before you submit:</string>
    <string name="govid">Government ID (front)</string>
    <string name="selfiewithid">Selfie with ID</string>
    <string name="thankyou_sign">Thank you for signing up!</string>
    <string name="for_now">For now, your application is under verification, please wait for at least 24 hours. Once approved, our Credit Officer will notify you thru SMS. If you have any questions regarding your application, our support team is available to help you, just contact us thru fb.com/debtcoinph or thru mobile number 0998-984-4714.</string>
    <string name="login_info">Login Information</string>
    <string name="desireduser">Desired Username</string>
    <string name="desiredpass">Desired Password</string>
    <string name="whatisdebtcoin">What is Debtcoin all about?</string>
    <string name="whyapplication">Why application was not approved?</string>
    <string name="howmuchqualify">How much the borrower could qualify for?</string>
    <string name="howapplicantreceive">How the applicants receive/claim the loan?</string>
    <string name="howrepay">How the borrowers repay the loan?</string>
    <string name="howcontanct">How the applicant or borrower can contact Debtcoin?</string>
    <string name="taptoview">Tap to view more</string>
    <string name="sendusamsg">Send us a message</string>
    <string name="whatisdebtcoin_c">Debtcoin is a micro-lending corporation that uses latest technology such as developing mobile
applications to offer personalized lending experience.</string>
    <string name="vision">Vision</string>
    <string name="vision_desc">For short term, Debtcoin is the primary option of Filipinos in providing them small loans using our lending
technology for convenient and enjoyable transactions. \nFor long term, Debtcoin expands as financial entity that extends its system features and professional
services to invest, offer loans and finance Filipino entrepreneurs’ business ideas.</string>
    <string name="mission">Mission</string>
    <string name="mission_desc">Internally, we intend to create and nurture a healthy, exuberant and respectful environment in which
employees are fairly compensated and encouraged to respect the customers and the quality of service
we intend to provide.\nExternally, excellence in fulfilling the promise: we intend to offer completely enjoyable lending interface at
faster approval, bigger initial credit limit, lower interest rate and few loan requirements.</string>
    <string name="whyapplicantnotapprived_c">Our Credit Team verifies the application at fast pace. Loan approval was based on many pieces of
information that the applicant provides during the sign-up phase. If not approved, this is due to the
information you provide that did not pass the standard that we set, like the ID picture, employment status
and reference.\n\nThe applicant should keep the app installed since our Credit Team may contact at a later date for re-application.</string>
    <string name="howmuchborrower_c">We offer small loans up to Php 50,000 for our most qualified customers. First time borrowers start at
lower amounts. The credit limit is indicated thru our system’s ranking features.\n\nAs rank increases, the credit limit also increases. To advance in rank, the borrower should pay dues on
time and refer as many approved applicants as possible.\n\nWe honour requests for limit increase, as long as the reason is justifiable and the borrower is qualified.
</string>
    <string name="howapplicantsreceive_c">Once approved, the borrower has many convenient ways to receive the loan proceed including
remittance centers, direct to bank account registered during sign-up stage, or Coins.ph e-wallet.\n\nTo receive the loan, simply choose the preferred method. Make sure that the information provided must
be correct to avoid delays.\n\nTo claim the loan proceed thru Coins.ph, sign up for a Coins.ph account, then complete phone, identity,
and selfie verification to receive the loan in the Coins.ph wallet.</string>
    <string name="howborrowersrepay_c_p1">Upon applying for loan, the borrower will be provided with amortization schedule table, and dues shall be
paid on time.\n\nThe borrower can conveniently make payments with remittance centers (MLhuillier, Cebuana, Palawan
or Villarica), direct to banks as deposit or fund transfer (BDO, BPI or LBP), or thru Coins.ph wallet. Tap
the logos below for the account details.
</string>
    <string name="howborrowersrepay_c_p2">Simply return to the home screen or tap the menu
button, then tap “Make a Payment” to get started. </string>
    <string name="taptoseemore">Tap to see more</string>
    <string name="howborrowersrepay_c_p3">There are no penalties for paying early. Instead early
and on time payments will increase the rank, thus
increases the credit limit.\n\nA late payment fee of six percent (6%) of the past due balance shall be imposed. An overlapping fee
amounting to Php 250.00 shall be imposed every time the borrower’s dues overlapped. In case the
borrower has no payment activity in the previous three (3) months or certain stipulations are not met,
the issue will be subject to legal action.</string>
    <string name="howborrowerscontact_c">If there are inquiries or concerns, our team is available from Monday-Saturday, between 8am-5pm. Just
contact us thru our email debtcoinph@gmail.com or call us thru 0998-984-4714..
</string>
    <string name="ifpayment">If payment will be made thru </string>
    <string name="accntname">Account Name:</string>
    <string name="bankaccnt">BPI Account:</string>
    <string name="close">Close</string>
    <string name="navheader_currentrank">Current Rank:</string>
    <string name="navheader_creditlimit">Credit Limit:</string>
    <string name="navheader_referrals">Referrals:</string>
    <string name="overview_current_amount">Current Loan Amount</string>
    <string name="overview_terms">Terms (in days)</string>
    <string name="overview_payable_amount">Total Payable Amount</string>
    <string name="overview_num_of_payments">Number of Payments (Every 15 days)</string>
    <string name="overview_payments_made">Number of Payments Made</string>
    <string name="overview_amount_due">Total Amount Due</string>
    <string name="overview_total_amount_due_footer">(Due Date) or (Payment Due Immediately)</string>
    <string name="overview_notice">Notice:</string>
    <string name="overview_cannot_apply">- You cannot apply for another loan.</string>
    <string name="debtcoin_works_quote">\"Experience our personalized lending technology, at faster approval, bigger initial credit limit, lower interest rate and few loan requirements.\"</string>
    <string name="debtcoin_works_step1">Step 1 of 5</string>
    <string name="debtcoin_works_step2">Step 2 of 5</string>
    <string name="debtcoin_works_step3">Step 3 of 5</string>
    <string name="debtcoin_works_step4">Step 4 of 5</string>
    <string name="debtcoin_works_step5">Step 5 of 5</string>
    <string name="debtcoin_works_requirements">Sign-up:</string>
    <string name="rank_ranking">Ranking</string>
    <string name="rank_how2advance">How to advance?</string>
    <string name="rank_paycredits">* Pay your credits on-time</string>
    <string name="rank_refer_many">* Refer as many customers as possible</string>
    <string name="rank_note">Note:</string>
    <string name="rank_note1">* Not paying on time may reduce your credit limit, and worst, your Debtcoin account will be forfeited.</string>
    <string name="rank_note2">* No payment activity or certain stipulations are not met may lead to legal action (refer to Debtcoin Credit Policy).</string>
</resources>