<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    android:id="@+id/relative_debtcoinrank_container"
    tools:context="com.debtcoin.debtcoinapp.Fragments.DebtcoinRank">

   <ScrollView
       android:padding="15dp"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:fillViewport="true"
       >
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           >

           <LinearLayout
               android:gravity="center"
               android:background="@color/md_white_600"
               android:padding="15dp"
               android:layout_gravity="center"
               android:layout_centerHorizontal="true"
               android:layout_centerVertical="true"
               android:weightSum="100"
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               >
               <ImageView
                   android:id="@+id/img_rank_badge"
                   android:layout_marginRight="10dp"
                   android:layout_width="90dp"
                   android:layout_height="90dp"
                   android:src="@drawable/gold"
                   />
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   >
                   <TextView
                       android:textColor="@color/md_white_1000"
                       android:id="@+id/text_rank_fname"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Normz"

                       android:textSize="@dimen/sixteen"
                       android:textStyle="bold"
                       />
                   <LinearLayout
                       android:orientation="horizontal"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content">
                       <TextView
                           android:textColor="@color/md_white_1000"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginRight="5dp"
                           android:text="@string/navheader_currentrank"
                           android:textSize="@dimen/sixteen"
                           />
                       <TextView
                           android:textColor="@color/md_white_1000"
                           android:id="@+id/text_rank_rank"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginRight="5dp"
                           android:text="Gold"
                           android:textStyle="bold"
                           android:textSize="@dimen/sixteen"
                           />
                   </LinearLayout>
                   <LinearLayout
                       android:orientation="horizontal"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content">
                       <TextView
                           android:textColor="@color/md_white_1000"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginRight="5dp"
                           android:text="@string/navheader_creditlimit"
                           android:textSize="@dimen/sixteen"
                           />
                       <TextView
                           android:textColor="@color/md_white_1000"
                           android:id="@+id/text_rank_creditlimit"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginRight="5dp"
                           android:text="Php 50, 000"

                           android:textSize="@dimen/sixteen"
                           />
                   </LinearLayout>
                   <LinearLayout
                       android:orientation="horizontal"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content">
                       <TextView
                           android:textColor="@color/md_white_1000"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginRight="5dp"
                           android:text="@string/navheader_referrals"
                           android:textSize="@dimen/sixteen"
                           />
                       <TextView
                           android:textColor="@color/md_white_1000"
                           android:id="@+id/text_rank_referrals"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginRight="5dp"
                           android:text="3"

                           android:textSize="@dimen/sixteen"
                           />
                   </LinearLayout>
               </LinearLayout>

           </LinearLayout>
           
           <LinearLayout
               android:padding="15dp"
               android:layout_marginTop="15dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:background="@color/md_white_600"
               >
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/rank_ranking"
                   android:textSize="@dimen/text_normal"
                   android:textColor="@color/md_white_1000"
                   android:textStyle="bold"
                   />
               <LinearLayout
                    android:layout_marginTop="-10dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"

                   >
                   <ImageView
                       android:src="@drawable/img_bronze_bangus_range"
                       android:layout_weight="33"
                       android:layout_width="172dp"
                       android:layout_height="204dp" />
                   <ImageView
                       android:src="@drawable/img_silver_carabao_range"
                       android:layout_weight="33"
                       android:layout_width="172dp"
                       android:layout_height="204dp" />
                   <ImageView
                       android:src="@drawable/img_gold_eagle_range"
                       android:layout_weight="33"
                       android:layout_width="172dp"
                       android:layout_height="204dp" />

               </LinearLayout>

               <TextView
                   android:layout_marginTop="-10dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/rank_how2advance"
                   android:textSize="@dimen/text_normal"
                   android:textColor="@color/md_white_1000"
                    android:textStyle="bold"
                   />
               <TextView
                   android:paddingLeft="15dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/rank_paycredits"
                   android:textSize="@dimen/text_normal"
                   android:textColor="@color/md_white_1000"

                   />
               <TextView
                   android:paddingLeft="15dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/rank_refer_many"
                   android:textSize="@dimen/text_normal"
                   android:textColor="@color/md_white_1000"

                   />

               <TextView
                   android:layout_marginTop="15dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/rank_note"
                   android:textSize="@dimen/text_normal"
                   android:textColor="@color/md_white_1000"
                   android:textStyle="bold"
                   />
               <TextView
                   android:paddingLeft="15dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/rank_note1"
                   android:textSize="@dimen/text_normal"
                   android:textColor="@color/md_white_1000"

                   />
               <TextView
                   android:paddingLeft="15dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/rank_note2"
                   android:textSize="@dimen/text_normal"
                   android:textColor="@color/md_white_1000"

                   />
           </LinearLayout>

       </LinearLayout>
   </ScrollView>
</RelativeLayout>
